--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
     "styled-components": "^5.3.0"
   },
