--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-responsive-carousel": "^3.2.19",
+    "react-slick": "^0.28.1",
     "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
