--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-responsive-carousel": "^3.2.19",
+    "react-responsive-modal": "^6.1.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
