--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^8.6.8",
     "next": "11.0.1",
