--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^8.6.8",
+    "micro": "^9.3.4",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-country-region-selector": "^3.1.0",
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-responsive-carousel": "^3.2.19",
@@ -22,6 +26,7 @@
     "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1",
+    "stripe": "^8.165.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
