--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-modal": "^6.1.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^7.0.4",
+    "react-vertical-timeline-component": "^3.3.3",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^8.165.0",
